header overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -623,7 +623,6 @@ header {
   position: relative;
   background: url("../images/kv-texture-background.jpg") no-repeat center bottom/cover transparent;
   height: 960px;
-  overflow: hidden;
 }
 
 header:before {
